# AIC-Connect

./: .editorconfig  .env.example  .eslintrc.json  .gitignore  AGENTS.md  DEMO.md  DEMO_SETUP.md  PITCH.md  README.md  TAG_SYSTEM_README.md  package.json  pnpm-lock.yaml  prd.md  ui-ux-design-mvp.md  ui-ux-design.md
apps/api/: DEMO_DATA.md  Dockerfile  README.md  alembic.ini  create_demo_data.py  pyproject.toml  pytest.ini  seed_demo_data.py
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20240928_000001_base.py  20250928_000002_auth_tables.py  20250928_000003_extend_user_profile.py  a760eef026b5_add_tag_usage_and_search_index_tables.py  b31d7b53de2d_add_spaces_and_articles.py  c123456789ab_add_feed_system_models.py  f010abb74553_add_profile_fields_and_expertise_tags_.py
apps/api/scripts/: create_demo_data.py  run_seeding.py  seed_articles_data.py  test_spaces_api.py  verify_implementation.py
apps/api/src/aic_hub/: config.py  constants.py  db.py  dependencies.py  github.py  main.py  rate_limiter.py  schemas.py  security.py  types.py  usernames.py
apps/api/src/aic_hub/models/: __init__.py  activity.py  article.py  auth_attempt.py  oauth_account.py  search_index.py  space.py  tag_usage.py  user.py  user_preferences.py
apps/api/src/aic_hub/routes/: __init__.py  articles.py  auth.py  feed.py  health.py  me.py  search.py  spaces.py  tags.py  users.py
apps/api/src/aic_hub/services/: __init__.py  activity_service.py  article_service.py  feed_service.py  search_service.py  space_service.py  tag_service.py
apps/api/src/aic_hub/utils/: __init__.py  slug.py
apps/api/tests/: conftest.py  test_auth_flow.py  test_health.py  test_security.py  test_users.py
docker/: compose.yaml
scripts/: setup-mkcert.sh  setup_demo.py
tasks/: 00-implementation-overview.md  03-articles-api.md  (+13 more)
(+51 files in other folders)
